@@ -210,6 +210,9 @@ Bug Fixes
 * SOLR-5679: Shard splitting fails with ClassCastException on collections
   upgraded from 4.5 and earlier versions. (Brett Hoerner, shalin)
 
+* SOLR-5673: HTTPSolrServer doesn't set own property correctly in
+  setFollowRedirects. (Frank Wesemann via shalin)
+
 Optimizations
 ----------------------
 
